# entropic-poetry

./: .travis.yml  README.md  entropic-poetry.cabal  poetry-enc.cabal  stack.yaml
app/: Main.hs
notes/: example.enc
src/: EncDec.hs  Lib.hs  Parser.hs  Syntax.hs  VarBase.hs  WordDatabase.hs  WordList.hs
src/VarBase/: EncDec.hs
src/WordDatabase/: Parser.hs  Words.hs
test/: EncDecSpec.hs  FormatParserSpec.hs  ParserTesting.hs  Spec.hs  VarBaseSpec.hs  WordListParserSpec.hs
