name:                entropic-poetry
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/entropic-poetry#readme
license:             BSD3
license-file:        LICENSE
author:              Tej Chajed
maintainer:          tchajed@mit.edu
copyright:           2017 Tej Chajed
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Syntax, Parser, VarBase.EncDec, EncDec, Lib
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , text
                     , mtl
                     , containers
                     , bytestring
  default-language:    Haskell2010

executable entropic-poetry
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , entropic-poetry
                     , optparse-applicative
                     , text
  default-language:    Haskell2010

test-suite entropic-poetry-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , entropic-poetry
                     , parsec
                     , mtl
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/entropic-poetry
